<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/dropzone_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants">

        <include layout="@layout/crescento_container" />

        <RelativeLayout
            android:id="@+id/jump_view_detail_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/crescentoContainer">

            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="10dp">

                    <TableRow>

                        <LinearLayout
                            android:id="@+id/contact_layout_website"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/detail_list_margin"
                                android:text="Website"
                                android:textAppearance="?attr/textAppearanceListItem"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/dropzone_view_website"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/detail_list_margin"
                                android:autoLink="web"
                                android:text="http://website.com" />

                        </LinearLayout>
                    </TableRow>

                    <TableRow>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/detail_list_margin"
                                android:text="Email"
                                android:textAppearance="?attr/textAppearanceListItem"
                                android:textStyle="bold" />


                            <TextView
                                android:id="@+id/dropzone_view_email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/detail_list_margin"
                                android:autoLink="email"
                                android:text="email@email.com" />


                        </LinearLayout>
                    </TableRow>

                    <TableRow>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/detail_list_margin"
                                android:text="Phone"
                                android:textAppearance="?attr/textAppearanceListItem"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/dropzone_view_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/detail_list_margin"
                                android:autoLink="phone"
                                android:text="00000 00 0000" />
                        </LinearLayout>
                    </TableRow>

                    <TableRow>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/detail_list_margin"
                                android:text="Aircraft"
                                android:textAppearance="?attr/textAppearanceListItem"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/dropzone_view_aircraft"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/detail_list_margin"
                                android:text="Aircraft" />
                        </LinearLayout>
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/divider" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/dropzone_view_description"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text="Description"
                            android:textAppearance="?attr/textAppearanceListItem" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <co.lujun.androidtagview.TagContainerLayout
                            android:id="@+id/dropzone_services"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            app:container_background_color="#00000000"
                            app:container_border_color="#33666666"
                            app:container_border_radius="0dp"
                            app:container_border_width="0dp"
                            app:container_gravity="left"
                            app:tag_background_color="#00000000"
                            app:tag_border_color="#330000ff"
                            app:tag_border_width="1dp"
                            app:tag_clickable="false"
                            app:tag_corner_radius="1dp"
                            app:tag_horizontal_padding="15dp"
                            app:tag_ripple_duration="0"
                            app:tag_text_color="#ff666666"
                            app:tag_text_size="14sp"
                            app:tag_theme="none" />
                    </TableRow>
                </TableLayout>


            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/jump_view_add_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jump_view_detail_card"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <include layout="@layout/list_ad_item" />
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/weather_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/jump_view_add_banner">

            <include layout="@layout/weather_card" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dropzone_view_map_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/weather_layout"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                app:cardUseCompatPadding="true">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TableRow>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_span="2"
                            android:layout_weight="1"
                            android:paddingBottom="10dp"
                            android:text="Map"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow android:paddingTop="10dp">

                        <mavonie.subterminal.Utils.Views.MapView
                            android:id="@+id/dropzone_view_map"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_span="2"
                            android:layout_weight="1" />
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>