...
            android:icon="@drawable/ic_menu_manage"
            android:title="Gear" />

        <item
            android:id="@+id/nav_exits"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="Exits" />
    </group>

    <group
        android:id="@+id/menu_group_SKYDIVING"
        android:checkableBehavior="single">
        <item
...
            android:icon="@drawable/ic_menu_manage"
            android:title="Gear" />

        <item
            android:id="@+id/skydiving_nav_dropzones"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="Dropzones" />

        <item
            android:id="@+id/skydiving_nav_tunnels"
            android:icon="@drawable/ic_wind_tunnels"
            android:title="Tunnels" />
    </group>
...
