<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Exit"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/exit_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exit_name"
            android:inputType="textPersonName"></EditText>

        <Spinner
            android:id="@+id/exit_object_type"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/skydive_edit_height_unit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="Height Unit"
            android:textSize="7pt"></TextView>


        <RadioGroup
            android:id="@+id/height_unit_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Metric (m)" />

            <RadioButton
                android:id="@+id/radio_imperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Imperial (ft)" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rockdrop Distance"/>

                <EditText
                    android:id="@+id/exit_edit_rockdrop_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="0"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Altitude to landing"/>

                <EditText
                    android:id="@+id/exit_edit_distance_to_landing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="0"
                    android:inputType="number"/>
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/exit_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:hint="Description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="3"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="Coordinates"
            android:textSize="10pt"></TextView>

        <Button
            android:id="@+id/exit_edit_gps_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="loadGPSCoordinates"
            android:text="Load from GPS"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Latitude"/>

                <EditText
                    android:id="@+id/exit_edit_lat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0.0000"
                    android:inputType="numberSigned"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Longtitude"/>

                <EditText
                    android:id="@+id/exit_edit_long"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0.0000"
                    android:inputType="numberSigned"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/exit_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="save"
            android:text="Save"/>

    </LinearLayout>
</ScrollView>