package mavonie.subterminal.Skydiving;


import androidx.test.espresso.ViewInteraction;
import androidx.test.espresso.matcher.ViewMatchers;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import com.pixplicity.easyprefs.library.Prefs;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Before;
import org.junit.Test;

import mavonie.subterminal.BaseTest;
import mavonie.subterminal.MainActivityTest;
import mavonie.subterminal.Preference;
import mavonie.subterminal.R;
import mavonie.subterminal.Utils.Subterminal;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.core.AllOf.allOf;

public class DropzoneTest extends BaseTest {

    @Before
    public void setMode() {
        if (!Prefs.getString(Preference.PREFS_MODE, null).equals(Subterminal.MODE_SKYDIVING)) {
            MainActivityTest.testSkydiveMode();
        }
    }

    @Test
    public void openDropzoneTest() {

        navigateToDropzones();

        ViewInteraction recyclerView = onView(
                allOf(withId(R.id.list),
                        withParent(withId(R.id.flContent)),
                        isDisplayed()));

        //Magic happening
        int x = getRandomRecyclerPosition(R.id.list);

//        recyclerView.perform(RecyclerViewActions.actionOnItemAtPosition(x, click()));

        onView(allOf(withId(R.id.contact_layout_website))).perform(scrollTo());

        ViewInteraction textView = onView(
                allOf(withText("Website"),
                        childAtPosition(
                                allOf(withId(R.id.contact_layout_website),
                                        childAtPosition(
                                                IsInstanceOf.<View>instanceOf(android.widget.TableRow.class),
                                                0)),
                                0),
                        isDisplayed()));
        textView.check(matches(withText("Website")));

        ViewInteraction textView2 = onView(
                allOf(withText("Email"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableRow.class),
                                        0),
                                0),
                        isDisplayed()));
        textView2.check(matches(withText("Email")));

        onView(allOf(withId(R.id.dropzone_view_map))).perform(scrollTo());

        ViewInteraction textView3 = onView(
                allOf(withText("Map"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        0),
                                0),
                        isDisplayed()));
        textView3.check(matches(withText("Map")));

        ViewInteraction textView4 = onView(
                allOf(withText("Map"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.TableLayout.class),
                                        0),
                                0),
                        isDisplayed()));
        textView4.check(matches(withText("Map")));

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }

    private void navigateToDropzones() {
        openNavigationDrawer();

        ViewInteraction appCompatCheckedTextView = onView(
                allOf(ViewMatchers.withId(R.id.design_menu_item_text), withText("Dropzones"), isDisplayed()));
        appCompatCheckedTextView.perform(click());
    }
}
